@@ -213,6 +213,7 @@ protected:
   exprt bits(const exprt &);
   std::optional<mp_integer> bits_rec(const typet &) const;
   constant_exprt countones(const constant_exprt &);
+  constant_exprt isunknown(const constant_exprt &);
   constant_exprt left(const exprt &);
   constant_exprt right(const exprt &);
   constant_exprt low(const exprt &);
